--- a/Week 7/Week 7 - R Programming Exercise.ipynb
+++ b/Week 7/Week 7 - R Programming Exercise.ipynb
@@ -45,19 +45,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "3"
+      ],
+      "text/latex": [
+       "3"
+      ],
+      "text/markdown": [
+       "3"
+      ],
+      "text/plain": [
+       "[1] 3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Code Here"
+    "sample(1:10, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "23"
+      ],
+      "text/latex": [
+       "23"
+      ],
+      "text/markdown": [
+       "23"
+      ],
+      "text/plain": [
+       "[1] 23"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "num <- sample(1:100, 1)\n",
     "num"
    ]
   },
@@ -70,11 +109,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"WELCOME TO GUESS ME!\"\n",
+      "[1] \"I'm thinking of a number between 1 and 100\"\n",
+      "[1] \"If your guess is more than 10 away from my number, I'll tell you you're COLD\"\n",
+      "[1] \"If your guess is within 10 of my number, I'll tell you you're WARM\"\n",
+      "[1] \"If your guess is farther than your most recent guess, I'll say you're getting COLDER\"\n",
+      "[1] \"If your guess is closer than your most recent guess, I'll say you're getting WARMER\"\n",
+      "[1] \"LET'S PLAY!\"\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code Here"
+    "print(\"WELCOME TO GUESS ME!\")\n",
+    "print(\"I'm thinking of a number between 1 and 100\")\n",
+    "print(\"If your guess is more than 10 away from my number, I'll tell you you're COLD\")\n",
+    "print(\"If your guess is within 10 of my number, I'll tell you you're WARM\")\n",
+    "print(\"If your guess is farther than your most recent guess, I'll say you're getting COLDER\")\n",
+    "print(\"If your guess is closer than your most recent guess, I'll say you're getting WARMER\")\n",
+    "print(\"LET'S PLAY!\")"
    ]
   },
   {
@@ -101,18 +160,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code Here"
+    "guesses <- c(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0"
+      ],
+      "text/latex": [
+       "0"
+      ],
+      "text/markdown": [
+       "0"
+      ],
+      "text/plain": [
+       "[1] 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "guesses"
    ]
@@ -135,9 +213,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run to get a user prompt lkj\n"
+     ]
+    }
+   ],
    "source": [
     "# Use readline() to get a user input prompt. The system will print the user input after pressing enter\n",
     "#This can be stored as a variable and used in the while loop\n",
@@ -146,13 +232,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 28\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code Here"
+    "while(guesses[length(guesses)] != num) {\n",
+    "    message(\"Guess a number between 1 and 100.\")\n",
+    "    guess <- strtoi(readline(prompt=\"What is your guess? \"))\n",
+    "    guesses <- append(guesses, guess)\n",
+    "}"
    ]
   },
   {
@@ -182,11 +313,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARMER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 6\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARMER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 11\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARMER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 12\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "COLDER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CONGRATULATIONS, YOU GUESSED IT IN ONLY 6 GUESSES.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code Here"
+    "while(guesses[length(guesses)] != num) {\n",
+    "    message(\"Guess a number between 1 and 100.\")\n",
+    "    guess <- strtoi(readline(prompt=\"What is your guess? \"))\n",
+    "    if(guess==num){\n",
+    "        message(paste0(\"CONGRATULATIONS, YOU GUESSED IT IN ONLY \", length(guesses), \" GUESSES.\"))\n",
+    "        break\n",
+    "    } else if(length(guesses)==1) {\n",
+    "        if(abs(guess-num)<=10){\n",
+    "            message(\"WARM!\")\n",
+    "        }\n",
+    "        if(abs(guess-num)>10){\n",
+    "            message(\"COLD!\")\n",
+    "        }\n",
+    "    } else {\n",
+    "        if(abs(guess-num)<abs(guesses[length(guesses)]-num)){\n",
+    "            message(\"WARMER!\")\n",
+    "        }\n",
+    "        if(abs(guess-num)>abs(guesses[length(guesses)]-num)){\n",
+    "            message(\"COLDER!\")\n",
+    "        }\n",
+    "    }\n",
+    "    guesses <- append(guesses, guess)\n",
+    "}"
    ]
   },
   {
@@ -222,11 +457,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "COLD!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 55\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "COLDER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 15\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARMER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 32\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARMER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 45\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "COLDER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 38\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARMER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 37\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARMER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 35\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARMER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 34\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARMER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 33\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARMER!\n",
+      "Guess a number between 1 and 100.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your guess? 28\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CONGRATULATIONS, YOU GUESSED IT IN ONLY 11 GUESSES.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code Here"
+    "num <- sample(1:100, 1)\n",
+    "guesses <- c(0)\n",
+    "while(guesses[length(guesses)] != num) {\n",
+    "    message(\"Guess a number between 1 and 100.\")\n",
+    "    guess <- strtoi(readline(prompt=\"What is your guess? \"))\n",
+    "    if(guess==num){\n",
+    "        message(paste0(\"CONGRATULATIONS, YOU GUESSED IT IN ONLY \", length(guesses), \" GUESSES.\"))\n",
+    "        break\n",
+    "    } else if(length(guesses)==1) {\n",
+    "        if(abs(guess-num)<=10){\n",
+    "            message(\"WARM!\")\n",
+    "        }\n",
+    "        if(abs(guess-num)>10){\n",
+    "            message(\"COLD!\")\n",
+    "        }\n",
+    "    } else {\n",
+    "        if(abs(guess-num)<abs(guesses[length(guesses)]-num)){\n",
+    "            message(\"WARMER!\")\n",
+    "        }\n",
+    "        if(abs(guess-num)>abs(guesses[length(guesses)]-num)){\n",
+    "            message(\"COLDER!\")\n",
+    "        }\n",
+    "    }\n",
+    "    guesses <- append(guesses, guess)\n",
+    "}"
    ]
   }
  ],
